# odoo-ls

./: .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  LICENSE  README.md  build.sh  build_package.sh  changelog.md  noxfile.py  package-lock.json  package.json  requirements.in  setup.py  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: warn_supsect_pr.yml
client/: extension.ts
client/src/: configurationWebView.ts  extension.ts  treeConfigurations.ts  welcomeWebView.ts
client/utils/: cleanup.mjs  utils.ts  validation.ts
client/views/changelog/: changelogWebview.ts  style.css
client/views/configurations/: configurationWebView.html  configurationWebView.js  configurationWebView.ts  style.css  treeDatabases.ts
client/views/crash_report/: body.html  crashReport.ts  style.css
client/views/welcome/: style.css  welcomeAlertView.html  welcomeWebView.html  welcomeWebView.ts
client/webview-ui/: configurationWebView.js  style.css  welcomeWebView.js
nvim/: README.md
nvim/lua/odools/: init.lua  utils.lua
nvim/plugin/: command.lua
server/: Cargo.toml  Cross.toml  OdooLanguageServer.py  README.md  TODO.txt  __init__.py  __main__.py  build.sh  constants.py  controller.py  error_code.md  evaluation.py  fileMgr.py  importResolver.py  inferencer.py  model.py  module.py  odoo.py  odooBase.py  odooModule.py  odoo_language_server.py  pythonArchBuilder.py  pythonOdooBuilder.py  pythonOdooBuilderBase.py  pythonOdooBuilderV14.py  pythonOdooBuilderV15.py  pythonOdooBuilderV16.py  pythonParser.py  pythonUtils.py  pythonValidation.py  pythonValidator.py  python_utils.py  references.py  server.py  structure.md  symbol.py  updateEventQueue.py  update_event_queue.py
server/additional_stubs/lxml/: .bumpversion.cfg  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py  tox.ini
server/additional_stubs/lxml/lxml/: ElementInclude.pyi  _types.pyi  builder.pyi  cssselect.pyi  etree.pyi  isoschematron.pyi  sax.pyi
server/additional_stubs/lxml/lxml/etree/: __init__.pyi  _classlookup.pyi  _cleanup.pyi  _docloader.pyi  _dtd.pyi  _element.pyi  _factory_func.pyi  _iterparse.pyi  _module_func.pyi  _module_misc.pyi  _nsclasses.pyi  _parser.pyi  _relaxng.pyi  _saxparser.pyi  _serializer.pyi  _xinclude.pyi  _xmlerror.pyi  _xmlid.pyi  _xmlschema.pyi  _xpath.pyi  _xslt.pyi
server/additional_stubs/lxml/lxml/html/: __init__.pyi  _element.pyi  _form.pyi  _funcs.pyi  _parse.pyi  builder.pyi  clean.pyi  defs.pyi  diff.pyi  html5parser.pyi  soupparser.pyi
server/additional_stubs/lxml/lxml/objectify/: __init__.pyi  _annotate.pyi  _element.pyi  _factory.pyi  _misc.pyi
server/benches/: iai_profiler.rs
server/core/: __init__.py  evaluation.py  fileMgr.py  file_mgr.py  importResolver.py  import_resolver.py  model.py  module.py  odoo.py  pythonArchBuilder.py  pythonArchBuilderOdooHooks.py  pythonArchEval.py  pythonArchEvalOdooHooks.py  pythonLocalArchBuilder.py  pythonOdooBuilder.py  pythonOdooBuilderBase.py  pythonOdooBuilderV14.py  pythonOdooBuilderV15.py  pythonOdooBuilderV16.py  python_arch_builder.py  python_arch_builder_odoo_hooks.py  python_arch_eval.py  python_arch_eval_odoo_hooks.py  python_odoo_builder.py  python_odoo_builder_base.py  python_odoo_builder_v14.py  python_odoo_builder_v15.py  python_odoo_builder_v16.py  python_odoo_builder_v17.py  symbol.py  symbol_depends.py  threadCondition.py  thread_condition.py
server/features/: __init__.py  autocomplete.py  definition.py  hover.py  parsoUtils.py  parso_utils.py
server/features/validation/: __init__.py  pythonValidator.py  python_validator.py
server/src/: allocator.rs  args.rs  backend.rs  cli_backend.rs  constants.rs  lib.rs  main.rs  my_weak.rs  odoo.rs  ruff_utils.rs  server.rs  threads.rs  utils.rs
server/src/core/: config.rs  csv_arch_builder.rs  diagnostic_codes_list.rs  diagnostics.rs  entry_point.rs  evaluation.rs  event.rs  event_queue.rs  file_mgr.rs  import_resolver.rs  localized_symbol.rs  messages.rs  mod.rs  model.rs  odoo.rs  python_arch_builder.rs  python_arch_builder_hooks.rs  python_arch_eval.rs  python_arch_eval_hooks.rs  python_function_eval.rs  python_odoo_builder.rs  python_utils.rs  python_validator.rs  symbol.rs  symbol_location.rs  text_document.rs  xml_arch_builder.rs  xml_arch_builder_rng_validation.rs  xml_data.rs  xml_validation.rs
server/src/core/symbols/: class_symbol.rs  compiled_symbol.rs  csv_file_symbol.rs  disk_dir_symbol.rs  file_symbol.rs  function_symbol.rs  mod.rs  module_symbol.rs  namespace_symbol.rs  namespace_symbol_hooks.rs  package_symbol.rs  root_symbol.rs  symbol.rs  symbol_mgr.rs  variable_symbol.rs  xml_file_symbol.rs
server/src/features/: ast_utils.rs  completion.rs  definition.rs  document_symbols.rs  features_utils.rs  hover.rs  mod.rs  node_index_ast.rs  references.rs  xml_ast_utils.rs
server/src/tool_api/: io_threads.rs  mod.rs  server.rs  socket.rs  to_json.rs  tool_api.rs
server/tests/: config_tests.rs  mod.rs  module_1_structure.json  test_basics.rs  test_get_symbol.rs  test_ls.rs  test_setup.rs  test_utils.rs
server/tests/data/addons/module_1/: __manifest__.py
server/tests/data/addons/module_1/constants/data/: __init__.py  constants.py
server/tests/data/addons/module_1/models/: __init__.py  base_test_models.py  models.py  to_complete.py
server/tests/data/addons/module_1/not_loaded/: not_loaded_file.py
server/tests/data/addons/module_2/: __init__.py  __manifest__.py
server/tests/data/addons/module_2/models/: base_test_models.py
server/tests/data/python/expressions/: assign.py  ifs.py  sections.py
server/tests/setup/: mod.rs  setup.rs
server/tests/unit/: setup.py  test_odoo_framework.py  test_odoo_ls.py  test_odoo_requests.py  test_python_utils.py  test_references.py  test_setup.py
tools/odoolsspy/: odoo-ls-spy.py
tools/odoolsspy/connection/: connection.py
tools/odoolsspy/views/: list_entries.py  monitoring.py  (+3 more)
vscode/: .vscodeignore  README.md  build_package.sh  noxfile.py  package.json  requirements.in  tsconfig.json  vscode.code-workspace
vscode/client/: extension.ts  global.d.ts
(+35 files in other folders)
