[package]
name = "odoo_ls_server"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
regex = "1.10.3"
ropey = "1.6.1"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.6.9", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.6.9", version = "0.0.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.6.9", version = "0.0.0" }
lsp-server = { git = "https://github.com/rust-lang/rust-analyzer", tag = "2024-06-17", version = "0.7.6" }
serde = "1.0.195"
serde_json = "1.0.111"
url = "2.5.0"
weak-table = "0.3.2"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.13"
path-slash = "0.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi", "synchapi", "handleapi"] }
ctrlc = "3.4.4"
once_cell = "1.20.1"
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.29.0", features = ["process"] }

[[bench]]
name = "iai_profiler"
harness = false

[dev-dependencies]
iai-callgrind = "0.14.0"
