[package]
name = "odoo_ls_server"
version = "0.8.1"
edition = "2021"
authors = ["Odoo"]
readme = "../README.md"
repository = "https://github.com/odoo/odoo-ls"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
glob = "0.3.2"
regex = "1.11.1"
ropey = "1.6.1"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.12.7", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.12.7", version = "0.0.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.12.7", version = "0.0.0" }
lsp-server = { git = "https://github.com/rust-lang/rust-analyzer", tag = "2025-08-04", version = "0.7.6" }
serde = "1.0.219"
serde_json = "1.0.142"
url = "2.5.4"
weak-table = "0.3.2"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.15"
path-slash = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi", "synchapi", "handleapi"] }
ctrlc = "3.4.7"
once_cell = "1.21.3"
itertools = "0.14.0"
byteyarn = "0.5.1"
roxmltree = "0.20.0"
dirs = "5.0"
toml = "0.8.23"
# ittapi = "0.3" # profiling with VTune profiler
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.29.0", features = ["process"] }

[[bench]]
name = "iai_profiler"
harness = false

[dev-dependencies]
iai-callgrind = "0.14.2"
assert_fs = "1.1"

[features]
default = []
debug_yarn = []  # use a readable structure instead of Yarn for debug purpose
